update ansible deployment scripts to set amazon S3 configuration

--- a/platform-config/manager/src/test/resources/amazonS3Config.properties
+++ b/platform-config/manager/src/test/resources/amazonS3Config.properties
@@ -8,6 +8,10 @@ s3.bucket.dev = ekstep-config-dev
 s3.bucket.qa = ekstep-config-qa
 s3.bucket.prod = ekstep-config-prod
 
+#S3 Region configuration
+s3.region = AP_SOUTHEAST_1
+
+#Folder configuration
 s3.content.folder = content
 s3.asset.folder = assets
 s3.artifact.folder = artifact
