--- a/language-platform/module/common/src/test/resources/amazonS3Config.properties
+++ b/language-platform/module/common/src/test/resources/amazonS3Config.properties
@@ -8,6 +8,10 @@ s3.bucket.dev = ekstep-public-dev
 s3.bucket.qa = ekstep-public-qa
 s3.bucket.prod = ekstep-public-prod
 
+#S3 Region configuration
+s3.region = AP_SOUTHEAST_1
+
+#Folder configuration
 s3.content.folder = content
 s3.asset.folder = assets
 s3.artifact.folder = artifact
