--- a/orchestrator/module/request-router/pom.xml
+++ b/orchestrator/module/request-router/pom.xml
@@ -37,6 +37,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>learning-actors</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>language-actors</artifactId>
 			<version>1.0-SNAPSHOT</version>
