--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -26,13 +26,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
-			<artifactId>ekstep-common</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>platform-dac</artifactId>
+			<artifactId>learning-actors</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
