--- a/platform-modules/pom.xml
+++ b/platform-modules/pom.xml
@@ -24,6 +24,7 @@
 		<module>common</module>
 		<module>manager</module>
 		<module>service</module>
+		<module>actors</module>
 	</modules>
 
 	<dependencies>
