chore: Restructuring Provision and Deployment scripts contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/deploy.yml
+++ b/platform-devops/ansible/deploy.yml
@@ -1,4 +1,15 @@
-- hosts: env
+- hosts: learning
   roles:
         - deployartifact
 
+- hosts: language
+  roles:
+        - deployartifact
+
+- hosts: search
+  roles:
+        - deployartifact
+
+- hosts: config
+  roles:
+        - deployartifact
