--- a/platform-devops/ansible/roles/logstash/tasks/main.yml
+++ b/platform-devops/ansible/roles/logstash/tasks/main.yml
@@ -2,29 +2,84 @@
 # tasks file for logstash
 - name: Download th zip
   get_url: url=https://download.elastic.co/logstash/logstash/logstash-all-plugins-2.3.3.tar.gz dest=/home/ec2-user/logstash-all-plugins-2.3.3.tar.gz  timeout=1000 force=no owner=ec2-user 
+  tags: 
+       - always
 
 - name: unzip 
   unarchive: src=/home/ec2-user/logstash-all-plugins-2.3.3.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates=/home/ec2-user/logstash-2.3.3
-
-- name: add logstash configuration files
-  template: src={{ item.name }}  dest={{ item.destination }}
-  with_items:
-    - { name: 'logstash-graph-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-graph-events.conf' }
-    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+  tags: 
+       - always
 
 - name: set permissions
   file: path=/home/ec2-user/logstash-2.3.3 owner=ec2-user group=ec2-user mode=0755 recurse=yes 
+  tags: 
+       - always
 
+#****************************ADD EVENTS********************************************
+- name: add logstash configuration files for learning
+  template: src=learning/{{ item.name }}  dest={{ item.destination }}
+  with_items:
+    - { name: 'logstash-graph-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-graph-events.conf' }
+    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+ tags:
+      - learning 
+
+
+- name: add logstash configuration files for language
+  template: src=language/{{ item.name }}  dest={{ item.destination }}
+  with_items:
+    - { name: 'logstash-graph-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-graph-events.conf' }
+    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+ tags:
+      - language 
+
+- name: add logstash configuration files for search
+  template: src=search/{{ item.name }}  dest={{ item.destination }}
+  with_items:
+    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+ tags:
+      - search 
+
+- name: add logstash configuration files for all
+  template: src=all/{{ item.name }}  dest={{ item.destination }}
+  with_items:
+    - { name: 'logstash-graph-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-graph-events.conf' }
+    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+ tags:
+      - all 
+#******************************************Check the process is running or not*****************************************************
+- name: copy template
+  template: src=stop_logstash_script.j2 dest={{ user_home }}/stop_logstash_script.sh
+  tags: 
+       - always
+
+- name: run script
+  become: yes
+  shell: sh {{ user_home }}/stop_logstash_script.sh
+  tags: 
+       - always
+
+  
 - name: Check if logstash graph events is running
   become_user: ec2-user
   shell: ps -ef | grep logstash | grep logstash-graph-events.conf | grep -v grep | wc -l
   register: logstash_process
+  tags: 
+       - learning
+       - language
+       - all
 
 - name: Check if logstash for word events is running
   become_user: ec2-user
   shell: ps -ef | grep logstash | grep logstash-word-events.conf | grep -v grep | wc -l
   register: word_events_process
-
+  tags: 
+       - learning
+       - search
+       - language
+       - all
+  
+#******************************************Run the process if not running*****************************************************
 - name: Run logstash
   become_user: ec2-user
   become: yes
@@ -32,6 +87,11 @@
   async: 60
   poll: 30
   when: "logstash_process.stdout == '0'"
+  tags: 
+       - learning
+       - language
+       - all
+
 
 - name: Run logstash for word events
   become_user: ec2-user
@@ -40,3 +100,9 @@
   async: 60
   poll: 30
   when: "word_events_process.stdout == '0'"
+  tags: 
+       - learning
+       - search
+       - language
+       - all
+
