Syntax: Tags syntax error contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/roles/ffmpeg/tasks/main.yml
+++ b/platform-devops/ansible/roles/ffmpeg/tasks/main.yml
@@ -6,6 +6,7 @@
     - git
     - git-core
     - zip
+    - gcc
     
 - name: Git clone FFmpeg repo
   git: repo=https://github.com/FFmpeg/FFmpeg.git dest=/home/ec2-user/ffmpeg version=release/3.0 
