Syntax: Separate iml for redis and mongo contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/mongodb.yml
+++ b/platform-devops/ansible/mongodb.yml
@@ -2,23 +2,23 @@
   remote_user: ec2-user
   become: yes
   roles:
-        - logstash
+        - mongodb
 
 - hosts: language
   remote_user: ec2-user
   become: yes
   roles:
-        - logstash
+        - mongodb
 
 - hosts: search
   remote_user: ec2-user
   become: yes
   roles:
-        - logstash                    
+        - mongodb                    
 
 
 - hosts: config
   remote_user: ec2-user
   become: yes
   roles:
-        - logstash   
+        - mongodb   
