--- a/platform-devops/ansible/roles/aws-login/tasks/main.yml
+++ b/platform-devops/ansible/roles/aws-login/tasks/main.yml
@@ -6,13 +6,24 @@
   with_items:
      - { path: '.aws', state: 'directory' }
      - { path: 'credentials', state: 'touch' }
+  tags:
+       - always
 
 - name: update .aws/credentials
   lineinfile: dest=.aws/credentials line='[default]'  state=present insertafter=EOF create=yes
+  tags:
+       - always
+
 
 - name: update .aws/credentials
   lineinfile: dest=.aws/credentials line='aws_access_key_id={{ lookup('env', 'lp_aws_access_key_id') }}'  insertafter=EOF state=present create=yes
+  tags:
+       - always
+
 
 - name: update .aws/credentials
   lineinfile: dest=.aws/credentials line='aws_secret_access_key={{ lookup('env', 'lp_aws_secret_access_key') }}' insertafter=EOF state=present  create=yes
+  tags:
+       - always
+
   
