--- a/platform-devops/ansible/roles/imagemagick/tasks/main.yml
+++ b/platform-devops/ansible/roles/imagemagick/tasks/main.yml
@@ -2,3 +2,6 @@
 # tasks file for imagemagick
 - name: install imagemagick
   yum: name=ImageMagick state=present update_cache=yes
+  tags:
+       - always
+
