--- a/platform-devops/ansible/roles/tomcat/tasks/main.yml
+++ b/platform-devops/ansible/roles/tomcat/tasks/main.yml
@@ -1,24 +1,38 @@
 ---
 - name: Download Tomcat
   get_url: url=http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.36/bin/apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user/ timeout=1000 force=no owner=ec2-user group=ec2-user
+  tags:
+       - always
 
 - name: Extract archive
   unarchive: src=apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ tomcat_home }}
+  tags:
+       - always
 
 - name: Symlink install directory
   file: src={{ tomcat_home }} path=/usr/share/tomcat state=link
+  tags:
+       - always
 
 - name: Change ownership of Tomcat installation
   file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user state=directory recurse=yes
+  tags:
+       - always
 
 - name: create Catalina
   file: path={{ tomcat_home }}/conf/Catalina state=directory mode=755 
+  tags:
+       - always
 
 - name: create localhost
   file: path={{ tomcat_home }}/conf/Catalina/localhost state=directory mode=755 
+  tags:
+       - always
 
 - name: set permission
   file: path={{ tomcat_home }}  mode=0755 owner=ec2-user group=ec2-user recurse=yes
+  tags:
+       - always
 
 - name: add templates
   template: src={{ item.name }} dest={{ item.destination }}
@@ -26,19 +40,51 @@
     - { name: 'server.xml', destination: '/usr/share/tomcat/conf/' }
     - { name: 'iptables-save', destination: '/etc/sysconfig/iptables' }
     - { name: 'catalina.j2', destination: '{{ tomcat_home }}/bin/catalina.sh' }
+  tags:
+       - always
+
+- name: add templates
+  template: src={{ item.name }} dest={{ item.destination }}
+  with_items:  
     - { name: 'language-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
+  tags:
+       - language
+       - all
+
+- name: add templates
+  template: src={{ item.name }} dest={{ item.destination }}
+  with_items:  
     - { name: 'learning-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
+  tags:
+       - learning
+       - all
+
+- name: add templates
+  template: src={{ item.name }} dest={{ item.destination }}
+  with_items:  
     - { name: 'search-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
+  tags:
+       - serach
+       - all
+
+- name: add templates
+  template: src={{ item.name }} dest={{ item.destination }}
+  with_items:  
     - { name: 'config-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
+  tags:
+       - config
+       - all
 
 - name: Install Tomcat init script
   copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=755
- 
+  tags:
+       - always
+
 - name: set permission
   file: path={{ tomcat_home }}  mode=0755 owner=ec2-user group=ec2-user recurse=yes
+  tags:
+       - always
 
-- name: tomcat star
-  service: name=tomcat state=started
 
 
 
