--- a/platform-devops/ansible/roles/aws-login/tasks/main.yml
+++ b/platform-devops/ansible/roles/aws-login/tasks/main.yml
@@ -15,13 +15,13 @@
        - always
 
 
-- name: update .aws/credentials
+- name: update access_key from env var
   lineinfile: dest=.aws/credentials line='aws_access_key_id={{ lookup('env', 'lp_aws_access_key_id') }}'  insertafter=EOF state=present create=yes
   tags:
        - always
 
 
-- name: update .aws/credentials
+- name: update secret_key from env var 
   lineinfile: dest=.aws/credentials line='aws_secret_access_key={{ lookup('env', 'lp_aws_secret_access_key') }}' insertafter=EOF state=present  create=yes
   tags:
        - always
