Syntax: tags are changed contributes:ekstep/Learning-Platform #616,617

--- a/platform-devops/ansible/provision.yml
+++ b/platform-devops/ansible/provision.yml
@@ -17,11 +17,11 @@
               become: yes
               file: path=/data owner={{user}} group={{user}} state=directory recurse=yes
   roles:
-        - java
-        - aws-login
-        - tomcat
-        - ffmpeg
-        - imagemagick
+#        - java
+#        - aws-login
+#        - tomcat
+#        - ffmpeg
+#        - imagemagick
         - logstash
 
 - hosts: language
