--- a/platform-devops/ansible/roles/redis/tasks/main.yml
+++ b/platform-devops/ansible/roles/redis/tasks/main.yml
@@ -5,7 +5,7 @@
   become: yes
   yum: name="@Development tools" state=present 
   tags:
-       - always
+       - redis
 
 
 - name: download redis zipfile
@@ -13,38 +13,38 @@
   become: yes
   get_url: url=http://download.redis.io/releases/redis-stable.tar.gz dest=/home/ec2-user/redis-stable.tar.gz timeout=50 force=no owner=ec2-user
   tags:
-       - always
+       - redi
 
 
 - name: unzip 
   unarchive: src=/home/ec2-user/redis-stable.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ redis_home }}
   tags:
-       - always
+       - redis
 
 
 
 - name: Change ownership of redis installation
   file: path={{ redis_home }} owner=ec2-user group=ec2-user state=directory recurse=yes
   tags:
-       - always
+       - redis
 
 
 - name: redis conf
   lineinfile: dest={{ redis_home }}/redis.conf regexp='^dir ./' state=absent
   tags:
-       - always
+       - redis
 
 
 - name: redis conf
   lineinfile: dest={{ redis_home }}/redis.conf insertafter='# Note that you must specify a directory here, not a file name.' line='dir /home/ec2-user/redis-stable/' state=present
   tags:
-       - always
+       - redis
 
 
 - name: Go to the folder and run make
   command: chdir={{ redis_home }} make
   tags:
-       - always
+       - redis
 
 
 - name: Check if redis is running
@@ -53,7 +53,7 @@
   changed_when: false
   ignore_errors: true
   tags:
-       - always
+       - redis
 
 
 - name: start redis
@@ -65,5 +65,5 @@
   poll: 60
   when: "redis_process.stdout == '0'"
   tags:
-       - always
+       - redis
 
